@@ -171,9 +171,10 @@ SEXP do_system(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     rpipe *fp;
     char  buf[INTERN_BUFSIZE];
-    int   vis = 0, flag = 2, i = 0, j, ll, ignore_stderr = 0;
+    int   vis = 0, flag = 2, i = 0, j, ll, 
+	ignore_stdout = 0, ignore_stderr = 0;
     SEXP  tlist = R_NilValue, tchar, rval;
-    HANDLE hERR = NULL /* -Wall */;
+    HANDLE hOUT = NULL, hERR = NULL /* -Wall */;
 
     checkArity(op, args);
     if (!isString(CAR(args)))
@@ -183,6 +184,10 @@ SEXP do_system(SEXP call, SEXP op, SEXP args, SEXP rho)
     if (flag >= 100) {
 	ignore_stderr = 1;
 	flag -= 100;
+    }
+    if (flag >= 40) {
+	ignore_stdout = 1;
+	flag -= 40;
     }
     if (flag >= 20) {
 	vis = -1;
@@ -200,17 +205,23 @@ SEXP do_system(SEXP call, SEXP op, SEXP args, SEXP rho)
 	SetStdHandle(STD_OUTPUT_HANDLE, INVALID_HANDLE_VALUE);
 	SetStdHandle(STD_ERROR_HANDLE, INVALID_HANDLE_VALUE);
     }
+    if ((CharacterMode != RGui) && ignore_stdout) {
+	hOUT = GetStdHandle(STD_OUTPUT_HANDLE) ;
+	SetStdHandle(STD_OUTPUT_HANDLE, INVALID_HANDLE_VALUE);
+    }
     if ((CharacterMode != RGui) && ignore_stderr) {
 	hERR = GetStdHandle(STD_ERROR_HANDLE) ;
 	SetStdHandle(STD_ERROR_HANDLE, INVALID_HANDLE_VALUE);
     }
-    if (flag < 2) {
+    if (flag < 2) { /* Neither intern = TRUE nor 
+		       show.output.on.console for Rgui */
 	ll = runcmd(CHAR(STRING_ELT(CAR(args), 0)),
 		    getCharCE(STRING_ELT(CAR(args), 0)),
 		    flag, vis,
 		    CHAR(STRING_ELT(CADDR(args), 0)));
 	// if (ll == NOLAUNCH) warning(runerror());
     } else {
+	/* read stdout +/- stderr from pipe */
 	int m = 0;
 	if(flag == 2 /* show on console */ || CharacterMode == RGui) m = 2;
 	if(ignore_stderr) m = 0;
@@ -218,20 +229,19 @@ SEXP do_system(SEXP call, SEXP op, SEXP args, SEXP rho)
 		       getCharCE(STRING_ELT(CAR(args), 0)),
 		       vis, CHAR(STRING_ELT(CADDR(args), 0)), m);
 	if (!fp) {
-	    /* If we are capturing standard output generate an error */
+	    /* If intern = TRUE generate an error */
 	    if (flag == 3) error(runerror());
 	    // warning(runerror());
 	    ll = NOLAUNCH;
 	} else {
-	    if (flag == 3)
-		PROTECT(tlist);
+	    /* FIXME: use REPROTECT */
+	    if (flag == 3) PROTECT(tlist);
 	    for (i = 0; rpipeGets(fp, buf, INTERN_BUFSIZE); i++) {
-		if (flag == 3) {
+		if (flag == 3) { /* intern = TRUE */
 		    ll = strlen(buf) - 1;
-		    if ((ll >= 0) && (buf[ll] == '\n'))
-			buf[ll] = '\0';
+		    if ((ll >= 0) && (buf[ll] == '\n')) buf[ll] = '\0';
 		    tchar = mkChar(buf);
-		    UNPROTECT(1);
+		    UNPROTECT(1); /* tlist */
 		    PROTECT(tlist = CONS(tchar, tlist));
 		} else
 		    R_WriteConsole(buf, strlen(buf));
@@ -239,9 +249,10 @@ SEXP do_system(SEXP call, SEXP op, SEXP args, SEXP rho)
 	    ll = rpipeClose(fp);
 	}
     }
-    if ((CharacterMode != RGui) && ignore_stderr)
-	SetStdHandle(STD_ERROR_HANDLE, hERR);
-    if (flag == 3) {
+    /* restore stdout/stderr if we changed it */
+    if (hOUT) SetStdHandle(STD_OUTPUT_HANDLE, hOUT);
+    if (hERR) SetStdHandle(STD_ERROR_HANDLE, hERR);
+    if (flag == 3) { /* intern = TRUE: convert pairlist to list */
 	PROTECT(rval = allocVector(STRSXP, i));
 	for (j = (i - 1); j >= 0; j--) {
 	    SET_STRING_ELT(rval, j, CAR(tlist));
